# TDZK_T002_ROS_CONTROL

./: -DCMAKE_FIND_DEBUG_MODE=1  .gitignore  DEV_LOG.md  GDZ_CAN_调试命令.txt  README.md  face_pointing_debug.csv  face_raw_data.csv  face_track.csv  face_zhaoshen.csv  imu_yaw_log.csv  query_dm_params.py  yaw_imu.py
docs/: ESTOP_README.md
scripts/: analyze_face_data.py  calibrate_pitch_friction.py  fit_friction.py  motor_com.py
src/controller/t002_controller/: CMakeLists.txt  package.xml  t002_controller_plugin.xml
src/controller/t002_controller/config/: controller.yaml
src/controller/t002_controller/include/t002_controller/: t002_controller.hpp  user_code.hpp
src/controller/t002_controller/launch/: deploy.launch.py  sim.launch.py
src/controller/t002_controller/src/: t002_controller.cpp  user_code.cpp  xbox_text.cpp
src/dm_imu/: setup.py
src/dm_imu/config/: params.yaml
src/dm_imu/dm_imu/: node.py
src/face_detect/: face_detect_node.py  package.xml  rknn_detector.py  setup.py
src/face_detect/face_detect/: face_detect_node.py  face_detector.py  face_viz_node.py
src/face_msgs/: CMakeLists.txt  package.xml
src/face_msgs/msg/: EmotionResult.msg  FaceCrop.msg  FaceTarget.msg
src/hardware/imu/: CMakeLists.txt  package.xml
src/hardware/imu/include/: imu_driver.hpp
src/hardware/imu/src/: imu_driver.cpp  pybind_module.cpp
src/hardware/imu/src/driver/: yis320_dec.c  yis320_dec.h  yis320_imu_driver.cpp  yis320_imu_driver.hpp
src/hardware/imu/src/protocol/: serial_port.cpp
src/hardware/motors/: CMakeLists.txt  package.xml
src/hardware/motors/include/: motor_driver.hpp
src/hardware/motors/src/: motor_driver.cpp  pybind_module.cpp
src/hardware/motors/src/drivers/dm/: CMakeLists.txt  dm_motor_driver.cpp  dm_motor_driver.hpp
src/hardware/motors/src/drivers/encos/: CMakeLists.txt  encos_motor_driver.cpp  encos_motor_driver.hpp
src/hardware/motors/src/drivers/evo/: CMakeLists.txt  evo_motor_driver.cpp  evo_motor_driver.hpp
src/hardware/motors/src/drivers/stw/: CMakeLists.txt  stw_motor_driver.cpp  stw_motor_driver.hpp
src/hardware/motors/src/protocol/: CMakeLists.txt
src/hardware/motors/src/protocol/can/: socket_can.cpp  socket_can.hpp
src/hardware/robot_hardware/: CMakeLists.txt  package.xml  robot_hardware_plugin.xml
src/hardware/robot_hardware/include/: robot_hardware_node.hpp  thread_pool.hpp
src/hardware/robot_hardware/src/: robot_hardware_node.cpp
src/head_solver/: package.xml  setup.cfg  setup.py
src/head_solver/head_solver/: head_solver.py  parallelJoint_g1.py  solver_node.py  torque_control_node.py
urdfs/: regenerate_xacros.py
urdfs/T002_description/: CMakeLists.txt  package.xml
urdfs/T002_description/meshes/: Plink.STL  Rlink.STL  Ylink.STL  base_link.STL  neck-pitch_Link.STL  neck-roll_Link.STL  neck-yaw_Link.STL  wheel-left-roll_Link.STL  wheel-left-yaw_Link.STL  wheel-right-roll_Link.STL  wheel-right-yaw_Link.STL
urdfs/T002_description/worlds/: empty_imu.sdf
urdfs/T002_description/xacro/: T002_description.urdf.xacro  T002_gazebo_des.urdf.xacro  imu_config.yaml  joints_config.yaml  ros2control.xacro
